[package]
name = "agh-exporter-rs"
authors = ["Manuel Olguín Muñoz <manuel@olguinmunoz.xyz>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_derive = "4.4"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = "0.11"
log = "0.4"
simple_logger = "4.3"
serde_json = "1.0"
serde_prometheus = "0.2"
serde = "1.0"
serde_derive = "1.0"
axum = { version = "0.7", features = ["tokio"] }
