[package]
name = "agh-exporter-rs"
authors = ["Manuel Olguín Muñoz <manuel@olguinmunoz.xyz>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "A small HTTP server exporting AdGuard Home metrics for consumption in Prometheus."
readme = "README.md"
homepage = "https://github.com/molguin92/agh-exporter-rs"
repository = "https://github.com/molguin92/agh-exporter-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
clap = { version = "4.4", features = ["derive", "env"] }
clap_derive = "4.4"
log = "0.4"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_prometheus = "0.2"
simple_logger = "4.3"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
